Fixed CSS styling on table headers

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ table.bookList {
 }
 table.bookList th {
 	font-size: 15px;
-	color: #fff;
+	color: #0984e3;
 	text-transform: uppercase;
 	padding: 5px;
 	border: 1px solid #2d3436;
