--- a/agarci27/css/style.css
+++ b/agarci27/css/style.css
@@ -2,12 +2,13 @@ body {
 	font-size: 20px;
 	color: #555555;
 	background-color: #f5f5f5;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	margin: auto;
 	padding: 25px;
 	max-width: 960px;
 }
 h1 {
+	font-family: 'Montserrat', sans-serif;
 	text-align: center;
 	text-transform: uppercase;
 	color: #ffffff;
@@ -15,6 +16,7 @@ h1 {
 	padding: 5px 0;
 }
 h2 { 
+	font-family: 'Montserrat', sans-serif;
 	color: #ff6347;
 	padding: 5px 0;
 }
@@ -27,20 +29,22 @@ hr {
 	border: 2px solid;
 	opacity: 0.5;
 }
-table.bookList {
+table.listall {
+	font-family: 'Open Sans', sans-serif;
 	border: 1px solid #2d3436;	
 }
-table.bookList th {
+table.listall th {
 	font-size: 15px;
 	color: #0984e3;
 	text-transform: uppercase;
 	padding: 5px;
 	border: 1px solid #2d3436;
 }
-table.bookList td {
+table.listall td {
 	padding: 5px;
 	border: 1px solid #2d3436;
 }
-p.totalPrice {
+p {
+	font-family: 'Open Sans', sans-serif;
 	font-size: 1.5em;
 }
