--- a/agarci27/css/style.css
+++ b/agarci27/css/style.css
@@ -1,27 +1,48 @@
+html, body, h1, form, fieldset, legend, ol, li {
+	margin: 0;
+	padding: 0;
+}
 body {
 	font-size: 20px;
 	color: #555555;
 	background-color: #f5f5f5;
 	font-family: 'Open Sans', sans-serif;
-	margin: auto;
+	margin: auto auto auto 0;
 	padding: 25px;
 	max-width: 960px;
 }
+
 h1 {
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
 	text-transform: uppercase;
 	color: #ffffff;
 	background-color: #f2784b;
-	padding: 5px 0;
+	padding: 15px 0;
 }
+.footer {
+	background-color: #0984e3;
+	height: 200px;
+}
+
 h2 { 
 	font-family: 'Montserrat', sans-serif;
 	color: #ff6347;
 	padding: 5px 0;
 }
-strong {
-	font-size: 1.1em;
+
+h3 {
+	color: white;
+	padding: 10px 0;
+	margin: 10px 0;
+}
+form#login {
+	background: #9cbc2c;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	padding: 20px;
+	width: 400px;
 }
 hr {
 	max-width: 150px;
@@ -29,11 +50,13 @@ hr {
 	border: 2px solid;
 	opacity: 0.5;
 }
+
 table {
 	border-collapse: collapse;
-	margin: 10px;
+	margin: 0 10px;
 	width: 100%;
 }
+
 table, tr, th, td {
 	text-align: center;
 	height: 50px;
@@ -43,6 +66,12 @@ table, tr, th, td {
 	padding: 5px;
 	border: 2px solid #000000;
 }
+
+table.table_header {
+	color: white;
+	background-color: #0984e3;
+}
+
 table.listall, table.listall th, 
 table.listall td {
 	text-align: center;
@@ -53,25 +82,37 @@ table.listall td {
 	padding: 5px;
 	border: 2px solid #000000;
 }
+
 p {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 1.5em;
 }
+
+a:visited {
+	color: #555555;
+}
+
+a:active {
+	background-color: #0984e3;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #f3f3f3;
 }
 
 li {
     float: left;
 	border-right: 1px solid #bbb;
 }
+
 li:last-child {
     border-right: none;
 }
+
 li a {
     display: block;
     color: white;
@@ -82,5 +123,10 @@ li a {
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-    background-color: #111;
+	background-color: #111;
+}
+
+strong {
+	font-size: 1.1em;
+	color: #0984e3;
 }
